<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="quick_record"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_record_label"
        android:shortcutLongLabel="@string/shortcut_record_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.planner.tracker"
            android:targetClass="com.planner.tracker.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="view_stats"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_stats_label"
        android:shortcutLongLabel="@string/shortcut_stats_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.planner.tracker"
            android:targetClass="com.planner.tracker.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="manage_goals"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_goal_label"
        android:shortcutLongLabel="@string/shortcut_goal_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.planner.tracker"
            android:targetClass="com.planner.tracker.MainActivity" />
    </shortcut>
</shortcuts>
